--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.2.1
   dropdown_button2: ^1.6.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
