--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cloud_firestore: ^3.2.1
   dropdown_button2: ^1.6.3
   intl: ^0.17.0
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
