--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dropdown_button2: ^1.6.3
   intl: ^0.17.0
   percent_indicator: ^4.2.2
+  settings_ui: ^2.0.2
 
 dev_dependencies:
   flutter_test:
