--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   percent_indicator: ^4.2.2
   settings_ui: ^2.0.2
   firebase_core: ^1.19.1
+  flutter_easyloading: ^3.0.5
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
