--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^1.19.1
   flutter_easyloading: ^3.0.5
   flutter_spinkit: ^5.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
